--- a/src/index.css
+++ b/src/index.css
@@ -72,3 +72,8 @@
     @apply bg-background text-foreground;
   }
 }
+.wmde-markdown ul {
+  list-style-type: disc;
+  padding-left: 25px;
+  color: white;
+}
